# cinema-system

./: .gitignore  .gitignore.backup  .sonarcloud.properties  CMakeLists.txt  CMakeLists.txt.txt  KursachNew.sln  KursachNew.vcxproj  KursachNew.vcxproj.filters  KursachNew.vcxproj.filters.txt  KursachNew.vcxproj.txt  KursachNew.vcxproj.user.txt  README.md.txt  sonar-project.properties  sonar-project.properties.txt
.github/workflows/: sonarcloud.yml
KursachNew/: CMakeLists.txt  KursachNew.qrc  KursachNew.ui  KursachNew.vcxproj  KursachNew.vcxproj.filters  sonar-project.properties
KursachNew/.github/workflows/: sonarcloud.yml
test/: test_main.cpp
ui_test/: ui_test_main.cpp
x64/Debug/: KursachNew.exe.recipe  vc143.idb
x64/Debug/KursachNew.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  KursachNew.lastbuildstate  KursachNew.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
x64/Debug/qt/moc/: moc_BookingDialog.cpp  moc_HallDialog.cpp  moc_HallMapDialog.cpp  moc_MovieDialog.cpp  moc_SessionDialog.cpp  test_main.moc  ui_test_main.moc
x64/Debug/qt/qmake/: qtvars.vcxproj  qtvars.xml
x64/Debug/qt/rcc/: qrc_KursachNew.cpp
x64/Debug/qt/uic/: ui_KursachNew.h
